ejercicio_12/ejercicio_streamlit2/ExprParser.py
# Generated from ./Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'public'", "'class'", "'static'", "'void'", 
                     "'main'", "'int'", "'System'", "'.'", "'out'", "'println'", 
                     "<INVALID>", "'+'", "'{'", "'}'", "'('", "')'", "'['", 
                     "']'", "'='", "'String'", "'>'", "<INVALID>", "<INVALID>", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "PUBLIC", "CLASS", "STATIC", "VOID", 
                      "MAIN", "INT", "SYSTEM", "DOT", "OUT", "PRINTLN", 
                      "CADENA", "MAS", "LA", "LC", "PA", "PC", "CA", "CC", 
                      "ASIG", "STR", "MAYOR", "NUM", "IDF", "FIN", "WS" ]

    RULE_root = 0
    RULE_expr = 1

    ruleNames =  [ "root", "expr" ]

    EOF = Token.EOF
    PUBLIC=1
    CLASS=2
    STATIC=3
    VOID=4
    MAIN=5
    INT=6
    SYSTEM=7
    DOT=8
    OUT=9
    PRINTLN=10
    CADENA=11
    MAS=12
    LA=13
    LC=14
    PA=15
    PC=16
    CA=17
    CC=18
    ASIG=19
    STR=20
    MAYOR=21
    NUM=22
    IDF=23
    FIN=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_root




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.expr()
            self.state = 5
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(ExprParser.NUM, 0)

        def IDF(self):
            return self.getToken(ExprParser.IDF, 0)

        def PUBLIC(self):
            return self.getToken(ExprParser.PUBLIC, 0)

        def CLASS(self):
            return self.getToken(ExprParser.CLASS, 0)

        def STATIC(self):
            return self.getToken(ExprParser.STATIC, 0)

        def VOID(self):
            return self.getToken(ExprParser.VOID, 0)

        def MAIN(self):
            return self.getToken(ExprParser.MAIN, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def STR(self):
            return self.getToken(ExprParser.STR, 0)

        def MAYOR(self):
            return self.getToken(ExprParser.MAYOR, 0)

        def DOT(self):
            return self.getToken(ExprParser.DOT, 0)

        def OUT(self):
            return self.getToken(ExprParser.OUT, 0)

        def PRINTLN(self):
            return self.getToken(ExprParser.PRINTLN, 0)

        def CADENA(self):
            return self.getToken(ExprParser.CADENA, 0)

        def MAS(self):
            return self.getToken(ExprParser.MAS, 0)

        def LA(self):
            return self.getToken(ExprParser.LA, 0)

        def LC(self):
            return self.getToken(ExprParser.LC, 0)

        def PA(self):
            return self.getToken(ExprParser.PA, 0)

        def PC(self):
            return self.getToken(ExprParser.PC, 0)

        def CA(self):
            return self.getToken(ExprParser.CA, 0)

        def CC(self):
            return self.getToken(ExprParser.CC, 0)

        def ASIG(self):
            return self.getToken(ExprParser.ASIG, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16777086) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





